# normals

./: Cargo.toml  training_pairs.txt
src/: main.rs
src/neural/: mod.rs  neural.rs
